--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.12.2",
+    "ejs": "~1.0.0",
     "express": "~4.12.3",
-    "socket.io": "^1.3.5",
-    "ejs": "~1.0.0"
+    "method-override": "^2.3.2",
+    "mongoose": "^4.0.0",
+    "socket.io": "^1.3.5"
   }
 }
